# pinta-rs

./: .gitignore  CANVAS_VIEWPORT_BEHAVIOR.md  Cargo.toml  README.md  VIBE_NOTES.md
.cargo/: config.toml
crates/pinta-app/: Cargo.toml
crates/pinta-app/src/: app.rs  diagnostics.rs  main.rs  message.rs  state.rs
crates/pinta-app/src/tools/: mod.rs  pencil.rs
crates/pinta-app/src/view/: main_window.rs
crates/pinta-app/src/viewport/: mod.rs
crates/pinta-theme/: Cargo.toml
crates/pinta-theme/src/: lib.rs
crates/pinta-theme/src/tokens/: colors.rs  mod.rs  radii.rs  sizing.rs  spacing.rs  typography.rs
crates/pinta-ui/: Cargo.toml
crates/pinta-ui/src/widgets/: canvas_viewport.rs  icon.rs  mod.rs  pad.rs  shell.rs  status_bar.rs  toolbox.rs
releases/0.1.0/: SHA256SUMS
releases/0.1.1/: SHA256SUMS
tools/: build_ui_comparisons.py  capture_mock.sh  capture_parity_bundle.sh  compare_with_upstream.sh  run_tool_mock_tests.sh
