[workspace]
resolver = "2"
members = [
  "crates/pinta-theme",
  "crates/pinta-ui",
  "crates/pinta-app",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.9"

[workspace.dependencies]
glam = "0.32.1"
iced = { version = "0.14", features = ["advanced", "canvas", "svg", "tokio"] }
serde = { version = "1", features = ["derive"] }
