[package]
name = "pinta-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
glam.workspace = true
iced.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
pinta-theme = { path = "../pinta-theme" }
pinta-ui = { path = "../pinta-ui" }
